--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Página do Papi</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tradutor Simultâneo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Página do Papi</h1>
-    <button id="start-record-btn">Iniciar Gravação</button>
-    <button id="stop-record-btn" disabled>Parar Gravação</button>
-    <p id="transcription">A transcrição aparecerá aqui...</p>
-
+    <div class="container">
+        <button id="toggle">Falar</button>
+        <div id="transcription">Transcrição aparece aqui...</div>
+        <div id="translation">Tradução aparece aqui...</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
