--- a/tradutor.html
+++ b/tradutor.html
@@ -1,3 +1,4 @@
+<script>
 // Função para enviar texto para o GPT-4 e receber a tradução
 async function translateText(inputText) {
   const response = await fetch('https://api.openai.com/v1/engines/gpt-4/completions', {
@@ -83,3 +84,4 @@ async function addToNotion(originalText, translatedText) {
   const notionData = await response.json();
   console.log(notionData); // Para propósitos de depuração
 }
+</script>
